--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
     "next": "^14.2.0",
+    "postcss": "^8.4.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.6",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.0"
   }
