--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "lucide-react": "^0.575.0",
     "next": "^14.2.0",
     "postcss": "^8.4.0",
     "qrcode": "^1.5.4",
